[package]
name = "twine"
version = "0.0.1"
authors = ["Twine protocol developers"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/twine-protocol/twine-rs"
documentation = ""
homepage = ""
description = """
Twine prococol library
"""
keywords = ["twine"]
categories = []
edition = "2021"
rust-version = "1.78"

[workspace]
members = [
  "./twine_core",
  "./twine_builder",
  "./twine_http_store",
  "./twine_sled_store",
  "./twine_cli", "twine_car_store", "twine_pickledb_store",
]

[features]
default = ["sha3", "blake3"]
http = ["dep:twine_http_store"]
build = ["dep:twine_builder"]
sha3 = ["twine_core/sha3"]
blake3 = ["twine_core/blake3"]
ripemd = ["twine_core/ripemd"]
blake2s = ["twine_core/blake2s"]
blake2b = ["twine_core/blake2b"]

[dependencies]
twine_core = { path = "./twine_core" }
twine_builder = { path = "./twine_builder", optional = true }
twine_http_store = { path = "./twine_http_store", optional = true }

[dev-dependencies]
twine_builder = { path = "./twine_builder" }
twine_http_store = { path = "./twine_http_store" }
serde = "1.0.216"
rand = "0.8.5"
