[package]
name = "twine_protocol"
version = "0.1.2"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
description = """
Twine protocol library meta-package
"""

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [
  "twine_lib",
  "twine_builder",
  "twine_http_store",
  "twine_sled_store",
  "twine_cli",
  "twine_car_store",
  "twine_pickledb_store",
  "twine_sql_store",
]

[workspace.package]
authors = ["Jasper Palfree <jasper.palfree@colordo.edu>"]
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/twine-protocol/twine-rs"
categories = ['data-structures', 'cryptography']
keywords = ["twine", "randomness", "blockchain"]

[workspace.dependencies]
twine_lib = { version = "0.2.1", path = "./twine_lib" }
twine_builder = { version = "0.1.2", path = "./twine_builder" }
twine_http_store = { version = "0.1.2", path = "./twine_http_store" }
twine_sled_store = { version = "0.1.2", path = "./twine_sled_store" }
twine_car_store = { version = "0.1.2", path = "./twine_car_store" }
twine_pickledb_store = { version = "0.1.2", path = "./twine_pickledb_store" }
twine_sql_store = { version = "0.1.2", path = "./twine_sql_store" }
thiserror = "2.0.12"
futures = "0.3"
log = "0.4"
either = "1.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
itertools = "0.14"
async-trait = "0.1"
async-std = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
ring = { version = "0.17" }
rsa = "0.9"
http = "1.3.1"
anyhow = "1.0"

[features]
default = ["sha3", "blake3"]
http = ["dep:twine_http_store"]
build = ["dep:twine_builder"]
sha3 = ["twine_lib/sha3"]
blake3 = ["twine_lib/blake3"]
ripemd = ["twine_lib/ripemd"]
blake2s = ["twine_lib/blake2s"]
blake2b = ["twine_lib/blake2b"]
rsa = ["twine_builder/rsa"]

[dependencies]
twine_lib.workspace = true
twine_builder = { workspace = true, optional = true }
twine_http_store = { workspace = true, optional = true }

[dev-dependencies]
twine_builder = { path = "./twine_builder" }
twine_http_store = { path = "./twine_http_store" }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
