[package]
name = "twine_builder"
version = "0.0.1"
edition = "2021"
rust-version = "1.78"

[features]
default = []
rsa = ["dep:rsa", "dep:rand"]

[dependencies]
twine_core = { path = "../twine_core/" }
thiserror = "2.0.8"
futures = "0.3"
biscuit = "0.7"
ring = "0.17"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
num-bigint = "0.4"
chrono = "0.4"
rsa = { version = "0.9", optional = true }
rand = { version = "0.8", optional = true }
pkcs8 = { version = "0.10", features = ["pem"] }

[dev-dependencies]
serde_json = "1.0"
rsa = "0.9"
rand = "0.8"
