[package]
name = "twine_builder"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
rsa = ["dep:rsa", "dep:rand"]
v1 = ["dep:biscuit"]

[dependencies]
twine_core.workspace = true
thiserror.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
num-bigint = "0.4"
biscuit = { version = "0.7", optional = true }
rsa = { workspace = true, optional = true }
rand = { version = "0.8", optional = true }
pkcs8 = { version = "0.10", features = ["pem"] }
const-oid = { version = "0.9", features = ["db"] }
ring.workspace = true

[target.'wasm32-unknown-unknown'.dependencies.ring]
version = "0.17"
features = ["wasm32_unknown_unknown_js"]

[dev-dependencies]
rsa = "0.9"
rand.workspace = true
tokio.workspace = true
