[package]
name = "twine_car_store"
version = "0.1.0"
edition = "2021"

[dependencies]
twine_core = { path = "../twine_core" }
futures = "0.3"
async-trait = "0.1"
async-std = "1.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
twine_builder = { path = "../twine_builder" }
tempfile = "3.15"