[package]
name = "twine_car_store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
twine_core.workspace = true
futures.workspace = true
async-trait.workspace = true
async-std.workspace = true

[dev-dependencies]
tokio.workspace = true
twine_builder.workspace = true
tempfile = "3.15"