[package]
name = "twine_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
twine_core = { path = "../twine_core" }
twine_builder = { path = "../twine_builder" }
twine_http_store = { path = "../twine_http_store" }
twine_sled_store = { path = "../twine_sled_store" }
futures = "0.3"
itertools = "0.13"
serde = { version = "1.0" }
serde_yml = "0.0.7"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
confy = "0.6"
clap = { version = "4", features = ["derive"] }
directories = "5.0"
anyhow = "1.0"
indicatif = { version = "0.17", features = ["futures"] }
indicatif-log-bridge = "0.2"
log = "0.4"
simplelog = "0.12"
async-trait = "0.1"
num-format = { version = "0.4", features = ["with-system-locale"] }
indent = "0.1"
lazy_static = "1.4"