[package]
name = "twine_cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[[bin]]
name = "twine"
path = "src/main.rs"

[dependencies]
twine_core = { path = "../twine_core" }
twine_builder = { path = "../twine_builder", features = ["rsa"] }
twine_http_store = { path = "../twine_http_store" }
twine_sled_store = { path = "../twine_sled_store" }
twine_car_store = { path = "../twine_car_store" }
twine_pickledb_store = { path = "../twine_pickledb_store" }
futures = "0.3"
itertools = "0.13"
serde = { version = "1.0" }
serde_yml = "0.0.10"
serde_json = "1.0"
serde_with = "3.8"
tokio = { version = "1", features = ["full"] }
confy = "0.6"
clap = { version = "4", features = ["derive"] }
clap-stdin = "0.4"
directories = "5.0"
anyhow = "1.0"
indicatif = { version = "0.17", features = ["futures"] }
indicatif-log-bridge = "0.2"
log = "0.4"
simplelog = "0.12"
async-trait = "0.1"
num-format = { version = "0.4", features = ["with-system-locale"] }
indent = "0.1"
lazy_static = "1.4"
inquire = "0.7"
pkcs8 = { version = "0.10", features = ["pem"] }
shellexpand = "3.1.0"
ctrlc = "3.4"