[package]
name = "twine_cli"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "twine"
path = "src/main.rs"

[dependencies]
twine_core.workspace = true
twine_builder = { workspace = true, features = ["rsa"] }
twine_http_store.workspace = true
twine_sled_store.workspace = true
twine_car_store.workspace = true
twine_pickledb_store.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
itertools.workspace = true
serde_yml = "0.0.12"
serde_with = "3.8"
confy = "0.6"
clap = { version = "4", features = ["derive"] }
clap-stdin = "0.6.0"
directories = "6.0.0"
anyhow = "1.0"
indicatif = { version = "0.17", features = ["futures"] }
indicatif-log-bridge = "0.2"
log.workspace = true
simplelog = "0.12"
num-format = { version = "0.4", features = ["with-system-locale"] }
indent = "0.1"
lazy_static = "1.4"
inquire = "0.7"
pkcs8 = { version = "0.10", features = ["pem"] }
shellexpand = "3.1.0"
ctrlc = "3.4"