[package]
name = "twine_core"
version = "0.0.1"
edition = "2021"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
# v2

[dependencies]
log = "0.4"
serde = { version = "1.0.152", features = ["rc"] }
# josekit = "0.8.2"
biscuit = "0.7.0"
serde_ipld_dagcbor = { version = ">=0.6.1" }
serde_ipld_dagjson = "0.2.0"
serde_bytes = "0.11"
multihash = "0.19"
multihash-codetable = { version = "0.1", features = ["sha3"] }
multihash-derive = "0.9"
serde_json = "1.0"
thiserror = "2.0.6"
base64 = "0.22.0"
ipld-core = "0.4"
semver = "1.0"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
quick_cache = "0.6"
chrono = { version = "0.4", features = ["serde"] }
ring = { version = "0.17" }
rsa = { version = "0.9" }
elliptic-curve = { version = "0.13", features = ["alloc", "jwk", "pkcs8"] }
p256 = { version = "0.13" }
p384 = { version = "0.13" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
rs-car = "0.4"
# twine_builder = { path = "../twine_builder" }
