[package]
name = "twine_http_store"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
twine_core.workspace = true
futures.workspace = true
async-trait.workspace = true
# fvm_ipld_car = "0.7"
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["stream", "brotli", "json"] }
itertools.workspace = true
backon = "1.3"

[dev-dependencies]
tokio.workspace = true
futures-time = "3.0"
