[package]
name = "twine_http_store"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Twine protocol rust library http store"

[features]
server = ["axum", "tower", "tower-service"]

[dependencies]
twine_lib.workspace = true
futures.workspace = true
async-trait.workspace = true
# fvm_ipld_car = "0.7"
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["stream", "brotli", "json"] }
itertools.workspace = true
backon = "1.3"
axum = { version = "0.8", optional = true }
tower = { version = "0.5.2", optional = true }
tower-service = { version = "0.3", optional = true }
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
futures-time = "3.0"
axum = "0.8"
tower = "0.5.2"
tower-service = "0.3"
twine_builder.workspace = true
