[package]
name = "twine_lib"
version = "0.2.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Twine protocol rust library core functionality"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["sha3", "blake3"]
sha3 = ["multihash-codetable/sha3"]
blake3 = ["multihash-codetable/blake3"]
ripemd = ["multihash-codetable/ripemd"]
blake2s = ["multihash-codetable/blake2s"]
blake2b = ["multihash-codetable/blake2b"]
# v2

[dependencies]
log.workspace = true
serde = { workspace = true, features = ["rc"] }
# josekit = "0.8.2"
biscuit = "0.7.0"
serde_ipld_dagcbor = { version = ">=0.6.1" }
serde_ipld_dagjson = "0.2.0"
serde_bytes.workspace = true
multihash = "0.19"
multihash-codetable = { version = "0.1", features = ["sha2"] }
multihash-derive = "0.9"
serde_json.workspace = true
thiserror.workspace = true
base64 = "0.22.0"
ipld-core = "0.4"
semver = "1.0"
anyhow = "1.0"
futures.workspace = true
async-trait.workspace = true
quick_cache = "0.6"
rs-car-sync = "0.4"
chrono.workspace = true
rsa = { workspace = true }
elliptic-curve = { version = "0.13", features = ["alloc", "jwk", "pkcs8"] }
p256 = { version = "0.13" }
p384 = { version = "0.13" }
either = { workspace = true, features = ["serde"] }
ring.workspace = true

[target.'wasm32-unknown-unknown'.dependencies.ring]
workspace = true
features = ["wasm32_unknown_unknown_js"]

[dev-dependencies]
tokio.workspace = true
rs-car = "0.4"
# twine_builder = { path = "../twine_builder" }
