[package]
name = "twine_pickledb_store"
version = "0.1.0"
edition = "2021"

[dependencies]
twine_core = { path = "../twine_core" }
pickledb = { version = "0.5", features = ["bincode"], default-features = false }
futures = "0.3"
async-trait = "0.1"
async-std = "1.10"
serde = "1.0"
serde_bytes = "0.11"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
twine_builder = { path = "../twine_builder" }
tempfile = "3.15"
