[package]
name = "twine_pickledb_store"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
twine_core.workspace = true
pickledb = { version = "0.5", features = ["bincode"], default-features = false }
futures.workspace = true
async-trait.workspace = true
async-std.workspace = true
serde.workspace = true
serde_bytes.workspace = true

[dev-dependencies]
tokio.workspace = true
twine_builder.workspace = true
tempfile = "3.15"
