[package]
name = "twine_sled_store"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
twine_core = { path = "../twine_core" }
sled = "0.34"
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0" }
itertools = "0.13"
either = "1.12"
serde_json = "1.0"
log = "0.4"
zerocopy = { version = "0.7", features = ["byteorder", "derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3.2"
twine_builder = { path = "../twine_builder" }
