[package]
name = "twine_sled_store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
twine_core.workspace = true
sled = "0.34"
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
itertools.workspace = true
either.workspace = true
serde_json.workspace = true
log.workspace = true
zerocopy = { version = "0.8.23", features = ["derive"] }

[dev-dependencies]
tokio.workspace = true
tempfile = "3.2"
twine_builder.workspace = true
