[package]
name = "twine_sql_store"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ['sqlite']
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
runtime-tokio = ["sqlx/runtime-tokio"]
runtime-async-std = ["sqlx/runtime-async-std"]

[dependencies]
twine_core.workspace = true
futures.workspace = true
async-trait.workspace = true
sqlx = { version = "0.8.3", features = ["any", "json"] }
serde_json.workspace = true

[dev-dependencies]
sqlx = { version = "0.8.3", features = ["any", "mysql", "sqlite", "postgres", "runtime-tokio"] }
tokio.workspace = true
twine_builder.workspace = true

[profile.dev.package.sqlx-macros]
opt-level = 3